# kektech

./: .CMakeLists.txt.swp  .audio.cpp.swp  .gitignore  .main.cpp.swp  .render.cpp.swm  .render.cpp.swn  .render.cpp.swo  .render.cpp.swp  .ui.cpp.swp  CMakeLists.txt  Makefile  README.md  audio.cpp  audio.h  config.h  input.cpp  input.h  kektech  libs.h  main.cpp  main.h  map.cpp  map.h  render.cpp  render.h  save.cpp  save.h  ui.cpp  ui.h  vector.h
client/: .client_render.cpp.swo  .client_render.cpp.swp  .client_render.h.swp  .dialog.cpp.swp  client_main.cpp  client_main.h  client_render.cpp  client_render.h  dialog.cpp  dialog.h  engine.h  snake.cpp  snake.h
data/bmp/backgrounds/: creditart.png~
data/bmp/characters/: m4k.xcf
data/designs/: zlewhead.xcf
data/ds/: .start.ds.swp  start.ds
data/ds/kkui_dashboard/: dashboard.ds
data/ds_english/: basement2.ds  credits.ds  outside1.ds  outside2.ds  room1.ds  school1.ds  school2.ds  school3.ds  server2.ds  server3.ds  stairs.ds  start.ds  transition1.ds  transition2.ds  transition3.ds
data/ds_english/kkui_dashboard/: dashboard.ds
data/mat/: .avatars.avtr.swp  .game.mat.swp  avatars.avtr  game.mat  game.sfx
data/mus/: alert-loud.it  alert-quiet.it  convo1.it  credits.bak  credits.it  dashboard.it  espionage.it  freddie_freaker.it  infiltration.it  outside.it
data/txt/: .start.txt.swp  start.txt
data/txt_english/: basement2.txt  basement3.txt  bath1.txt  mcdonald.txt  outside_mcdonald.txt  room12.txt  server21.txt  server3.txt  server4.txt  server41.txt  server42.txt  stairs.txt  transition1.txt  transition3.txt
data/txt_english/menu_test/: dialog1.txt  dialog2.txt
leo/bmp/characters/: m4k.xcf
leo/ds/: basement1.ds  ending.ds  mcdonald.ds  server1.ds  server4.ds  start.ds  test.ds  zoo.ds
leo/ds/kkui_dashboard/: dashboard.ds
leo/ds_english/: basement3.ds  bath.ds  outside_mcdonald.ds  server1.ds
leo/mat/: game.mat  game.sfx
leo/mus/: credits.it.AutoSave.20230915.094014.it  room.it  vgmtest.vgm
leo/txt/: basement1.txt  basement2.txt  basement3.txt  bath1.txt  bath11.txt  bath12.txt  dialog0.txt  ending.txt  mcdonald.txt  outside1.txt  outside_mcdonald.txt  room1.txt  room11.txt  school1.txt  school3.txt  server1.txt  server2.txt  server22.txt  transition2.txt
leo/txt_english/: .school2.txt.swp  basement1.txt  bath11.txt  bath12.txt  ending.txt  outside1.txt  room1.txt  room11.txt  room12.txt  school1.txt  school2.txt  school21.txt  school22.txt  school3.txt  server1.txt  server2.txt  start.txt
save/: save1.ds
shader/: .colorquad.vert.swo  .colorquad.vert.swp  .ft.frag.swp  colorquad.frag  colorquad.vert  ft.frag  texturequad.frag  texturequad.vert
